# sepolicy

./: .gitattributes  .gitignore  .style.yapf  COPYING  Makefile  meson.build  meson.options
src/: agent.cil  anoninode.cil  dev.cil  file.cil  fs.cil  init.cil  invalid.cil  kernel.cil  meson.build  misc.cil  net.cil  selinux.cil  subj.cil  sys.cil  unlabeled.cil  user.cil
src/agent/: hybridagent.cil  meson.build  sysagent.cil  useragent.cil
src/agent/hybridagent/: chrony.cil  kbd.cil  meson.build  polkit.cil
src/agent/misc/: dbus.cil  glib.cil  gtk.cil  meson.build  nss.cil  pam.cil  systemd.cil  wayland.cil
src/agent/sysagent/: greetd.cil  ldconfig.cil  meson.build
src/anoninode/: iouringanoninode.cil  kvmgmemanoninode.cil  meson.build  perfeventanoninode.cil  secretmemanoninode.cil  uffdanoninode.cil
src/dev/: meson.build  nodedev.cil  stordev.cil  termdev.cil
src/dev/nodedev/: apmnodedev.cil  autofsnodedev.cil  btrfscontrolnodedev.cil  cachefilesnodedev.cil  cdcwdmnodedev.cil  clocknodedev.cil  cpunodedev.cil  crashnodedev.cil  cusenodedev.cil  dmaheapnodedev.cil  dmcontrolnodedev.cil  drinodedev.cil  drmdpauxnodedev.cil  eventnodedev.cil  fbnodedev.cil  gpionodedev.cil  hiddevnodedev.cil  hidrawnodedev.cil  hwrngnodedev.cil  i2cnodedev.cil  iionodedev.cil  infinibandnodedev.cil  inputnodedev.cil  ipminodedev.cil  kfdnodedev.cil  kmsgnodedev.cil  ksmnodedev.cil  kvmnodedev.cil  lircnodedev.cil  loopcontrolnodedev.cil  mcelognodedev.cil  meinodedev.cil  memnodedev.cil  meson.build  modemnodedev.cil  ndctlnodedev.cil  nullnodedev.cil  nvramnodedev.cil  pmunodedev.cil  pppnodedev.cil  (+23 more)
src/dev/stordev/: dmstordev.cil  fusestordev.cil  hdstordev.cil  loopstordev.cil  mdstordev.cil  meson.build  mtdstordev.cil  nvmestordev.cil  rawstordev.cil  removablestordev.cil  sdstordev.cil  sgstordev.cil  vdstordev.cil  xdstordev.cil  zramstordev.cil
src/dev/termdev/: meson.build  ptytermdev.cil  serialtermdev.cil  systermdev.cil  usertermdev.cil
src/file/: authfile.cil  bootfile.cil  bootflagfile.cil  certfile.cil  conffile.cil  datafile.cil  devfile.cil  homefile.cil  hugetlbfsfile.cil  meson.build  mqueuefsfile.cil  runfile.cil  secfile.cil  tmpfile.cil  tmpfsfile.cil  userfile.cil  varfile.cil
src/file/authfile/: meson.build  shadowauthfile.cil
src/file/conffile/: bashcompletionconffile.cil  editorconffile.cil  environconffile.cil  ethertypesconffile.cil  fontconffile.cil  fstabconffile.cil  hostsconffile.cil  hushloginsconffile.cil  inputrcconffile.cil  libglvndconffile.cil  libvulkanconffile.cil  localeconffile.cil  logindefsconffile.cil  meson.build  mimeconffile.cil  motdconffile.cil  networksconffile.cil  protocolsconffile.cil  resolvconffile.cil  rpcconffile.cil  selinuxconffile.cil  servicesconffile.cil  tcpwrappersconffile.cil  terminfoconffile.cil  tpmconffile.cil  xdgconffile.cil
src/file/datafile/: applicationsdatafile.cil  backgroundsdatafile.cil  bashcompletiondatafile.cil  editordatafile.cil  environdatafile.cil  execfile.cil  firmwaredatafile.cil  firmwarefile.cil  fontdatafile.cil  iconsdatafile.cil  libfile.cil  libglvnddatafile.cil  libinputdatafile.cil  libvulkandatafile.cil  localedatafile.cil  mesadatafile.cil  meson.build  mimedatafile.cil  modfile.cil  motddatafile.cil  pixmapsdatafile.cil  servicesdatafile.cil  soundsdatafile.cil  srcfile.cil  terminfodatafile.cil  themesdatafile.cil  waylanddatafile.cil  x11datafile.cil
src/file/homefile/: meson.build  syshomefile.cil
src/file/hugetlbfsfile/: meson.build  syshugetlbfsfile.cil
src/file/misc/: lostfoundfile.cil  machineidfile.cil  mediafile.cil  meson.build  nologinfile.cil  passwdfile.cil  pwdlockfile.cil  rootfile.cil  shellrcfile.cil  unknownfile.cil
src/file/mqueuefsfile/: meson.build  sysmqueuefsfile.cil
src/file/runfile/: environrunfile.cil  hostrunfile.cil  meson.build  motdrunfile.cil  runlockfile.cil  runuserfile.cil  utmprunfile.cil
src/file/secfile/: meson.build  selinuxsecfile.cil
src/file/tmpfile/: meson.build  systmpfile.cil
src/file/tmpfsfile/: meson.build  systmpfsfile.cil
src/file/userfile/: meson.build  userhomefile.cil  userhugetlbfsfile.cil  usermailspoolfile.cil  usermqueuefsfile.cil  userrunuserfile.cil  usertmpfile.cil  usertmpfsfile.cil
src/file/varfile/: cachefile.cil  dbfile.cil  logfile.cil  meson.build  spoolfile.cil  statefile.cil
src/fs/: meson.build  noseclabelfs.cil  seclabelfs.cil
src/fs/noseclabelfs/: aionoseclabelfs.cil  anoninodenoseclabelfs.cil  autonoseclabelfs.cil  bdevnoseclabelfs.cil  binfmtmiscnoseclabelfs.cil  bpfnoseclabelfs.cil  cinoseclabelfs.cil  confignoseclabelfs.cil  cpusetnoseclabelfs.cil  dosnoseclabelfs.cil  drmnoseclabelfs.cil  efivarnoseclabelfs.cil  fusenoseclabelfs.cil  iso9660noseclabelfs.cil  meson.build  nfsdnoseclabelfs.cil  nfsnoseclabelfs.cil  nsnoseclabelfs.cil  pidnoseclabelfs.cil  procnoseclabelfs.cil  removablenoseclabelfs.cil  resctrlnoseclabelfs.cil  rpcpipenoseclabelfs.cil  securitynoseclabelfs.cil  selinuxnoseclabelfs.cil  udfnoseclabelfs.cil
src/fs/seclabelfs/: cgroupseclabelfs.cil  debugseclabelfs.cil  devptsseclabelfs.cil  devtmpseclabelfs.cil  eventpollseclabelfs.cil  hugetlbseclabelfs.cil  meson.build  mqueueseclabelfs.cil  nfs4seclabelfs.cil  (+9 more)
src/kernel/: bpffile.cil  cgroupfile.cil  debugfile.cil  meson.build  procfile.cil  pstorefile.cil  securityfile.cil  sysfile.cil  tracefile.cil
src/misc/: av.cil  conf.cil  conf.cil.in  default.cil  isid.cil  map.cil  meson.build  mls.cil  modular.cil  obj.cil  perm.cil  silenced.cil  unconfined.cil
src/net/: ibnet.cil  meson.build  netifnet.cil  nodenet.cil  packetnet.cil  peernet.cil  portnet.cil  spdnet.cil
src/selinux/: booleanfile.cil  meson.build
src/sys/: bpffile.cil  cgroupfile.cil  debugfile.cil  procfile.cil  pstorefile.cil  securityfile.cil  sysfile.cil  tracefile.cil
src/user/: meson.build  privuser.cil  unprivuser.cil
templates/: meson.build  seusers.in
templates/contexts/: customizable_types  dbus_contexts  default_contexts.in  failsafe_context.in  meson.build  removable_context.in
templates/logins/: meson.build
(+296 files in other folders)
