# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

option(
    'mcs',
    type: 'boolean',
    value: true,
    description: 'Enable Multi-Category Security (MCS) support',
)

option(
    'sysadmin',
    type: 'boolean',
    value: true,
    description: 'Build administrative domains (such as sys.user.subj)',
)

option(
    'polvers',
    type: 'integer',
    min: 33,
    max: 34,
    value: 34,
    description: 'Policy version',
)
option(
    'modular',
    type: 'boolean',
    value: false,
    description: 'Build a modular policy rather than a monolithic one',
)
