# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'iouringanoninode.cil',
    'kvmgmemanoninode.cil',
    'perfeventanoninode.cil',
    'secretmemanoninode.cil',
    'uffdanoninode.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
