# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'apmnodedev.cil',
    'autofsnodedev.cil',
    'btrfscontrolnodedev.cil',
    'cachefilesnodedev.cil',
    'cdcwdmnodedev.cil',
    'clocknodedev.cil',
    'cpunodedev.cil',
    'crashnodedev.cil',
    'cusenodedev.cil',
    'dmaheapnodedev.cil',
    'dmcontrolnodedev.cil',
    'drinodedev.cil',
    'drmdpauxnodedev.cil',
    'eventnodedev.cil',
    'fbnodedev.cil',
    'gpionodedev.cil',
    'hiddevnodedev.cil',
    'hidrawnodedev.cil',
    'hwrngnodedev.cil',
    'i2cnodedev.cil',
    'iionodedev.cil',
    'infinibandnodedev.cil',
    'inputnodedev.cil',
    'ipminodedev.cil',
    'kfdnodedev.cil',
    'kmsgnodedev.cil',
    'ksmnodedev.cil',
    'kvmnodedev.cil',
    'lircnodedev.cil',
    'loopcontrolnodedev.cil',
    'mcelognodedev.cil',
    'meinodedev.cil',
    'memnodedev.cil',
    'modemnodedev.cil',
    'ndctlnodedev.cil',
    'nullnodedev.cil',
    'nvramnodedev.cil',
    'pmunodedev.cil',
    'pppnodedev.cil',
    'printernodedev.cil',
    'ptmxnodedev.cil',
    'qosnodedev.cil',
    'randomnodedev.cil',
    'rfkillnodedev.cil',
    'sndnodedev.cil',
    'tpmnodedev.cil',
    'ttynodedev.cil',
    'tuntapnodedev.cil',
    'udmabufnodedev.cil',
    'uffdnodedev.cil',
    'uhidnodedev.cil',
    'uinputnodedev.cil',
    'uionodedev.cil',
    'usbmonnodedev.cil',
    'usbnodedev.cil',
    'v4lnodedev.cil',
    'vfionodedev.cil',
    'vgaarbiternodedev.cil',
    'vhostnodedev.cil',
    'vmcinodedev.cil',
    'watchdognodedev.cil',
    'zeronodedev.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
