# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'dmstordev.cil',
    'fusestordev.cil',
    'hdstordev.cil',
    'loopstordev.cil',
    'mdstordev.cil',
    'mtdstordev.cil',
    'nvmestordev.cil',
    'rawstordev.cil',
    'removablestordev.cil',
    'sdstordev.cil',
    'sgstordev.cil',
    'vdstordev.cil',
    'xdstordev.cil',
    'zramstordev.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
