# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'bashcompletionconffile.cil',
    'editorconffile.cil',
    'fontconffile.cil',
    'hostsconffile.cil',
    'inputrcconffile.cil',
    'localeconffile.cil',
    'mimeconffile.cil',
    'selinuxconffile.cil',
    'terminfoconffile.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
