# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'bashcompletionconffile.cil',
    'editorconffile.cil',
    'environconffile.cil',
    'ethertypesconffile.cil',
    'fontconffile.cil',
    'fstabconffile.cil',
    'hostsconffile.cil',
    'hushloginsconffile.cil',
    'inputrcconffile.cil',
    'libglvndconffile.cil',
    'libvulkanconffile.cil',
    'localeconffile.cil',
    'logindefsconffile.cil',
    'mimeconffile.cil',
    'motdconffile.cil',
    'networksconffile.cil',
    'protocolsconffile.cil',
    'resolvconffile.cil',
    'selinuxconffile.cil',
    'servicesconffile.cil',
    'tcpwrappersconffile.cil',
    'terminfoconffile.cil',
    'xdgconffile.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
