# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'editordatafile.cil',
    'execfile.cil',
    'firmwaredatafile.cil',
    'firmwarefile.cil',
    'libfile.cil',
    'localedatafile.cil',
    'mesadatafile.cil',
    'mimedatafile.cil',
    'modfile.cil',
    'srcfile.cil',
    'terminfodatafile.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach

subdir('execfile')
