# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'backgroundsdatafile.cil',
    'bashcompletiondatafile.cil',
    'editordatafile.cil',
    'environdatafile.cil',
    'execfile.cil',
    'firmwaredatafile.cil',
    'fontdatafile.cil',
    'iconsdatafile.cil',
    'libfile.cil',
    'libglvnddatafile.cil',
    'libinputdatafile.cil',
    'libvulkandatafile.cil',
    'localedatafile.cil',
    'mesadatafile.cil',
    'mimedatafile.cil',
    'modfile.cil',
    'motddatafile.cil',
    'pixmapsdatafile.cil',
    'servicesdatafile.cil',
    'soundsdatafile.cil',
    'srcfile.cil',
    'terminfodatafile.cil',
    'themesdatafile.cil',
    'waylanddatafile.cil',
    'x11datafile.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach

subdir('execfile')
