# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'lostfoundfile.cil',
    'machineidfile.cil',
    'mediafile.cil',
    'nologinfile.cil',
    'passwdfile.cil',
    'rootfile.cil',
    'shellrcfile.cil',
    'unknownfile.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
