# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'environrunfile.cil',
    'motdrunfile.cil',
    'runlockfile.cil',
    'runuserfile.cil',
    'utmprunfile.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
