# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'userhomefile.cil',
    'userhugetlbfsfile.cil',
    'usermailspoolfile.cil',
    'usermqueuefsfile.cil',
    'userrunuserfile.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
