# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'aionoseclabelfs.cil',
    'anoninodenoseclabelfs.cil',
    'autonoseclabelfs.cil',
    'bdevnoseclabelfs.cil',
    'binfmtmiscnoseclabelfs.cil',
    'bpfnoseclabelfs.cil',
    'cinoseclabelfs.cil',
    'confignoseclabelfs.cil',
    'cpusetnoseclabelfs.cil',
    'dosnoseclabelfs.cil',
    'drmnoseclabelfs.cil',
    'efivarnoseclabelfs.cil',
    'fusenoseclabelfs.cil',
    'iso9660noseclabelfs.cil',
    'nfsdnoseclabelfs.cil',
    'nfsnoseclabelfs.cil',
    'nsnoseclabelfs.cil',
    'pidnoseclabelfs.cil',
    'procnoseclabelfs.cil',
    'removablenoseclabelfs.cil',
    'resctrlnoseclabelfs.cil',
    'rpcpipenoseclabelfs.cil',
    'securitynoseclabelfs.cil',
    'selinuxnoseclabelfs.cil',
    'udfnoseclabelfs.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
