# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'cgroupseclabelfs.cil',
    'debugseclabelfs.cil',
    'devptsseclabelfs.cil',
    'devtmpseclabelfs.cil',
    'eventpollseclabelfs.cil',
    'hugetlbseclabelfs.cil',
    'mqueueseclabelfs.cil',
    'nfs4seclabelfs.cil',
    'pidseclabelfs.cil',
    'pipeseclabelfs.cil',
    'pstoreseclabelfs.cil',
    'rootseclabelfs.cil',
    'sockseclabelfs.cil',
    'sysseclabelfs.cil',
    'tmpseclabelfs.cil',
    'traceseclabelfs.cil',
    'xattrseclabelfs.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
