# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'machineslicecgroupfile.cil',
    'memorypressurecgroupfile.cil',
    'sysslicecgroupfile.cil',
    'userslicecgroupfile.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
