# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'binderav.cil',
    'bpfav.cil',
    'capabilityav.cil',
    'fdav.cil',
    'iouringav.cil',
    'ipcav.cil',
    'kernelserviceav.cil',
    'keyav.cil',
    'memprotectav.cil',
    'msgav.cil',
    'perfeventav.cil',
    'socketav.cil',
    'systemav.cil',
    'usernamespaceav.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
