# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'systemdexecutor.cil',
    'systemdhostname.cil',
    'systemdjournal.cil',
    'systemdnetwork.cil',
    'systemdudev.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
